# Cyber_manager

./: .gitignore  README.md  build.gradle.kts  download_libs.sh  gradle.properties  gradlew  settings.gradle.kts
.GitHub/workflows/: build.yml
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  archive_extractor.cpp  archive_extractor.h  rar_extractor.cpp  rar_extractor.h  seven_zip_extractor.cpp  seven_zip_extractor.h  tar_extractor.cpp  tar_extractor.h  utils.cpp  utils.h  zip_extractor.cpp  zip_extractor.h
app/src/main/java/com/graywizard/filemanager/: CyberFileManagerApp.kt  MainActivity.kt
app/src/main/java/com/graywizard/filemanager/data/model/: FileItem.kt
app/src/main/java/com/graywizard/filemanager/data/preferences/: PreferencesManager.kt
app/src/main/java/com/graywizard/filemanager/data/repository/: FileRepository.kt
app/src/main/java/com/graywizard/filemanager/ui/navigation/: NavigationGraph.kt
app/src/main/java/com/graywizard/filemanager/ui/screens/about/: AboutScreen.kt
app/src/main/java/com/graywizard/filemanager/ui/screens/imageviewer/: ImageViewerScreen.kt
app/src/main/java/com/graywizard/filemanager/ui/screens/main/: MainScreen.kt  MainViewModel.kt
app/src/main/java/com/graywizard/filemanager/ui/screens/main/components/: BottomNavigationBar.kt  Dialogs.kt  FileListContent.kt
app/src/main/java/com/graywizard/filemanager/ui/screens/permission/: PermissionScreen.kt
app/src/main/java/com/graywizard/filemanager/ui/screens/videoplayer/: VideoPlayerScreen.kt
app/src/main/java/com/graywizard/filemanager/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/graywizard/filemanager/utils/: ArchiveExtractor.kt  FileCompressor.kt  FileUtils.kt  MediaScanner.kt  MimeTypeDetector.kt  PermissionHelper.kt  ThumbnailGenerator.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
